# bleanser

./: .gitignore  Dockerfile  LICENSE  README.md  doall  drun  endomondo.py  filter_sqlite.py  fsq.py  hypothesis.py  jdiff  jq_normaliser.py  json2.py  lastfm.py  myshows.py  normalise  pinboard.py  pyproject.toml  pytest.ini  reddit.py  requirements.txt  ruff.toml  setup.py  tox.ini
.ci/: run
.github/workflows/: main.yml
doc/: notes.md  options.md
docker/: Dockerfile  docker-compose.yml
old/: README.md  common.py  jq_normaliser.py  json.py  json2.py
scripts/: apt.sh
src/: 4sq.py  bluemaestro.py  jq_normaliser.py  lastfm.py  reddit.py
src/bleanser/: __main__.py
src/bleanser/core/: __init__.py  __main__.py  cli.py  common.py  compat.py  jq_normaliser.py  json.py  kompress.py  main.py  processor.py  sqlite.py  tests.py  utils.py
src/bleanser/core/ext/: dummy_executor.py  kompress.py  logging.py  sqlite_dumben.py
src/bleanser/core/modules/: binary.py  extract.py  json.py  json_new.py  sqlite.py  xml.py  xml_clean.py
src/bleanser/core/modules/tests/: binary.py  sqlite.py
src/bleanser/core/tests/: processor.py
src/bleanser/modules/: antennapod_android.py  binary.py  bluemaestro.py  bumble_android.py  chrome.py  fbmessenger_android.py  firefox.py  firefox_old.py  foursquare.py  ghexport.py  goodreads.py  hinge_android.py  hypothesis.py  instagram_android.py  iter.py  json_new.py  kobo.py  lastfm.py  monzo.py  pinboard.py  pocket.py  podcastaddict.py  podcastaddict_android.py  reddit.py  rescuetime.py  rescuetime_android.py  skype_android.py  sleepasandroid_android.py  smscalls.py  spotify.py  spotifyexport.py  stackexchange.py  talon_android.py  tiktok_android.py  tinder_android.py  twitter_android.py  vk_android.py  whatsapp_android.py  xml_clean.py
src/bleanser/modules/hpi/: fbmessenger_android.py  hypothesis.py  kobo.py  reddit.py  twitter_android.py  whatsapp_android.py
src/bleanser/tests/: common.py  test_binary.py  test_hypothesis.py
tests/: common.py  misc.py  rescuexport.py  sqlite.py  test_binary.py  test_hypothesis.py  test_json_new.py  test_rescuexport.py
