# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by setuptools_scm
name = "bleanser"
dependencies = [
    "more-itertools"   ,
    "typing-extensions",
    "click"            , # nicer cli
    "plumbum"          , # nicer command composition/piping
    "kompress"         , # for compressed files processing (TODO potentially could be optional if they don't use compressed files? but how to detect if they are compressed.. maybe via libmagic?)
]
requires-python = ">=3.9"

## these need to be set if you're planning to upload to pypi
# description = "TODO"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
# keywords = []
# # see: http://pypi.python.org/pypi?%3Aaction=list_classifiers
# classifiers = [
# ]


[project.urls]
Homepage = "https://github.com/karlicoss/bleanser"
##


[project.optional-dependencies]
extra = [
    "python-magic",  # more reliable mimetype detection -- requires extra binaries, so perhaps best to keep optional
    "logzero"     ,  # nicer logging, but can work without it
]
json = [
    "orjson",  # faster json processing (required if you use json-derived modules)
]
xml = [
    "lxml",  # for handling xml files (required if you use xml-derived modules)
]
zstd = [
    "kompress[zstd]",
]
HPI = [  # for bleanser.modules.hpi
    "HPI",
]

[dependency-groups]
testing = [
    "pytest",

    "ruff",

    "mypy",
    "lxml",  # for mypy html coverage

    "types-lxml",
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []
