# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "bleanser"
dependencies = [
    "more-itertools"   ,
    "click"            , # nicer cli
    "plumbum"          , # nicer command composition/piping
    "kompress"         , # for compressed files processing (TODO potentially could be optional if they don't use compressed files? but how to detect if they are compressed.. maybe via libmagic?)
]
requires-python = ">=3.12"

## these need to be set if you're planning to upload to pypi
# description = "TODO"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
# keywords = []
# # see: http://pypi.python.org/pypi?%3Aaction=list_classifiers
# classifiers = [
# ]


[project.urls]
Homepage = "https://github.com/karlicoss/bleanser"
##


[project.optional-dependencies]
extra = [
    "python-magic",  # more reliable mimetype detection -- requires extra binaries, so perhaps best to keep optional
    "logzero"     ,  # nicer logging, but can work without it
]
json = [
    "orjson",  # faster json processing (required if you use json-derived modules)
]
xml = [
    "lxml",  # for handling xml files (required if you use xml-derived modules)
]
zstd = [
    "kompress[zstd]",
]
HPI = [  # for bleanser.modules.hpi
    "HPI",
]

[dependency-groups]
# TODO: not sure, on the one hand could just use 'standard' dev dependency group
# On the other hand, it's a bit annoying that it's always included by default? 
# To make sure it's not included, need to use `uv run --exact --no-default-groups ...`
testing = [
    "pytest",
    "ruff",

    # optional deps that we include in all testing
    "bleanser[extra,json,xml]",
]
typecheck = [
    { include-group = "testing" },
    "mypy",
    "lxml",  # for mypy coverage
    "ty>=0.0.1a21",

    "types-lxml",
]
typecheck-all = [
    { include-group = "typecheck" },

    "bleanser[HPI]",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/bleanser"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
